--- a/utils/utils/package.json
+++ b/utils/utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lz-cli/package",
+  "name": "@lz-cli/utils",
   "version": "1.0.0",
   "description": "> TODO: description",
   "author": "lawzheng <602285510@qq.com>",
@@ -13,9 +13,6 @@
   "files": [
     "lib"
   ],
-  "publishConfig": {
-    "access": "public"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lawzheng/lz-cli.git"
@@ -25,14 +22,5 @@
   },
   "bugs": {
     "url": "https://github.com/lawzheng/lz-cli/issues"
-  },
-  "dependencies": {
-    "@lz-cli/format-path": "file:../../utils/format-path",
-    "@lz-cli/get-npm-info": "file:../../utils/get-npm-info",
-    "@lz-cli/utils": "file:../../utils/utils",
-    "fs-extra": "^10.0.0",
-    "npminstall": "^4.11.0",
-    "path-exists": "^4.0.0",
-    "pkg-dir": "^5.0.0"
   }
 }
