--- a/commands/init/package.json
+++ b/commands/init/package.json
@@ -32,8 +32,11 @@
     "@lz-cli/package": "file:../../models/package",
     "@lz-cli/request": "file:../../utils/request",
     "@lz-cli/utils": "file:../../utils/utils",
+    "ejs": "^3.1.6",
     "fs-extra": "^10.0.0",
+    "glob": "^7.1.7",
     "inquirer": "^8.1.2",
+    "kebab-case": "^1.0.1",
     "semver": "^7.3.5",
     "user-home": "^3.0.0"
   }
